fix display bug in affiliations : now all affiliations are well aligned

--- a/src/Components/Results/Person/Sections/Informations/SubSections/Affiliations/Affiliations.scss
+++ b/src/Components/Results/Person/Sections/Informations/SubSections/Affiliations/Affiliations.scss
@@ -50,6 +50,7 @@
   font-size: 12px;
   color: $scanrgreyColor;
   font-style: italic;
+  font-family: monospace;
 }
 
 .vl::before {
